--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,10 +9,16 @@ body{
 
 }
 
+
+
 main{
     background-color: white;
     width: 500px;
     margin: auto;
     padding: 10px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.411);
+}
+
+img.lado{
+    float: right;
 }
